# smart-transaction-ledger

./: .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: aws-deploy.yml  docker-build.yml  docker-compose.yml
data/: README.md
data/bronze/: README.md  finance_transactions.csv  fraud_patterns.csv  merchant_db.csv
data/gold/: gold_fraud_dataset.csv  gold_merchant_risk.csv  gold_user_behavior.csv
data/raw/: README.md  dummy_data.py  user_db.csv
data/silver/: finance_transactions_clean.csv  fraud_patterns_clean.csv  merchant_db_clean.csv  user_db_clean.csv
notesbooks/: 01-bronze.ipynb  02-silver-merchant.ipynb  03-silver-user.ipynb  04-silver-fraud-pattern.ipynb  05-silver-fin-txn.ipynb  06-gold-user-txn-for-user-behaviour.ipynb  07-gold-merchants-risk.ipynb  README.md
src/: data-cleaing.py  data-generation.py  data_generation.py  gold_fraud_dataset.py  gold_merchant_risk.py  gold_user_behavior.py
tests/: show_api.py  test_api.py
