[project]
name = "smart-transaction-ledger"
version = "0.1.0"
description = "AI-Powered Financial Transaction Cleaner & Fraud Detector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
]
